[HaCreator] Concept of Grid, StackPanel, Image for creating simulator UIs
self written, & extremely clean and efficient!
no more manual calculation of the width, height, top, bottom, left, right position! just add and add

--- a/HaCreator/HaCreator.csproj
+++ b/HaCreator/HaCreator.csproj
@@ -408,6 +408,18 @@
     <Compile Include="MapSimulator\MapObjects\FieldObject\BackgroundItem.cs" />
     <Compile Include="MapSimulator\MapObjects\FieldObject\MobItem.cs" />
     <Compile Include="MapSimulator\MapObjects\FieldObject\TooltipItem.cs" />
+    <Compile Include="MapSimulator\MapObjects\UIObject\Controls\HaUIAlignment.cs" />
+    <Compile Include="MapSimulator\MapObjects\UIObject\Controls\HaUIGrid.cs" />
+    <Compile Include="MapSimulator\MapObjects\UIObject\Controls\HaUIHelper.cs" />
+    <Compile Include="MapSimulator\MapObjects\UIObject\Controls\HaUIImage.cs" />
+    <Compile Include="MapSimulator\MapObjects\UIObject\Controls\HaUIInfo.cs" />
+    <Compile Include="MapSimulator\MapObjects\UIObject\Controls\HaUIMargin.cs" />
+    <Compile Include="MapSimulator\MapObjects\UIObject\Controls\HaUIPadding.cs" />
+    <Compile Include="MapSimulator\MapObjects\UIObject\Controls\HaUISize.cs" />
+    <Compile Include="MapSimulator\MapObjects\UIObject\Controls\HaUIStackOrientation.cs" />
+    <Compile Include="MapSimulator\MapObjects\UIObject\Controls\HaUIStackPanel.cs" />
+    <Compile Include="MapSimulator\MapObjects\UIObject\Controls\HaUIText.cs" />
+    <Compile Include="MapSimulator\MapObjects\UIObject\Controls\IHaUIRenderable.cs" />
     <Compile Include="MapSimulator\MapObjects\UIObject\UIObject.cs" />
     <Compile Include="MapSimulator\MapObjects\UIObject\UIObjectButtonEventHandler.cs" />
     <Compile Include="MapSimulator\MapObjects\UIObject\UIObjectState.cs" />
