--- a/HaCreator/HaCreator.csproj
+++ b/HaCreator/HaCreator.csproj
@@ -912,6 +912,9 @@
     <PackageReference Include="SharpDX.XInput">
       <Version>4.2.0</Version>
     </PackageReference>
+    <PackageReference Include="System.Data.SQLite">
+      <Version>1.0.118</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="HaLogo.ico" />
