--- a/HaCreator/HaCreator.csproj
+++ b/HaCreator/HaCreator.csproj
@@ -423,12 +423,12 @@
     <Compile Include="MapSimulator\MapObjects\UIObject\Controls\HaUIImage.cs" />
     <Compile Include="MapSimulator\MapObjects\UIObject\Controls\HaUIInfo.cs" />
     <Compile Include="MapSimulator\MapObjects\UIObject\Controls\HaUIMargin.cs" />
-    <Compile Include="MapSimulator\MapObjects\UIObject\Controls\HaUIPadding.cs" />
     <Compile Include="MapSimulator\MapObjects\UIObject\Controls\HaUISize.cs" />
     <Compile Include="MapSimulator\MapObjects\UIObject\Controls\HaUIStackOrientation.cs" />
     <Compile Include="MapSimulator\MapObjects\UIObject\Controls\HaUIStackPanel.cs" />
     <Compile Include="MapSimulator\MapObjects\UIObject\Controls\HaUIText.cs" />
     <Compile Include="MapSimulator\MapObjects\UIObject\Controls\IHaUIRenderable.cs" />
+    <Compile Include="MapSimulator\MapObjects\UIObject\StatusBarChatUI.cs" />
     <Compile Include="MapSimulator\MapObjects\UIObject\StatusBarUI.cs" />
     <Compile Include="MapSimulator\MapObjects\UIObject\UIObject.cs" />
     <Compile Include="MapSimulator\MapObjects\UIObject\UIObjectButtonEventHandler.cs" />
