--- a/HaCreator/HaCreator.csproj
+++ b/HaCreator/HaCreator.csproj
@@ -430,6 +430,7 @@
     <Compile Include="MapSimulator\MapObjects\UIObject\Controls\IHaUIRenderable.cs" />
     <Compile Include="MapSimulator\MapObjects\UIObject\StatusBarChatUI.cs" />
     <Compile Include="MapSimulator\MapObjects\UIObject\StatusBarUI.cs" />
+    <Compile Include="MapSimulator\MapObjects\UIObject\UIMouseEventHandler.cs" />
     <Compile Include="MapSimulator\MapObjects\UIObject\UIObject.cs" />
     <Compile Include="MapSimulator\MapObjects\UIObject\UIObjectButtonEventHandler.cs" />
     <Compile Include="MapSimulator\MapObjects\UIObject\UIObjectState.cs" />
