[HaRepacker] integrated AI image upscaler to context menu

--- a/RealESRGAN_AI_Upscale/RealESRGAN_AI_Upscale.csproj
+++ b/RealESRGAN_AI_Upscale/RealESRGAN_AI_Upscale.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="prereq.txt" />
     <Content Include="RealESRGAN\realesrgan-ncnn-vulkan.exe">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
