--- a/HaRepacker/packages.config
+++ b/HaRepacker/packages.config
@@ -2,7 +2,8 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="AvalonEdit" version="6.3.0.90" targetFramework="net48" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net48" />
+  <package id="Extended.Wpf.Toolkit" version="4.6.0" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
   <package id="MonoGame.Framework.WindowsDX" version="3.8.0.1641" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="SharpDX" version="4.2.0" targetFramework="net48" />
