[HaCreator] questeditor: act -- handling done for:   Item, Exp, Npc, Money, Pop, BuffItemId, Message_Map, CraftEXP, CharmEXP, CharismaEXP, InsightEXP, WillEXP, SenseEXP

--- a/HaCreator/HaCreator.csproj
+++ b/HaCreator/HaCreator.csproj
@@ -952,13 +952,25 @@
     <Content Include="HaLogo\HaLogo48.png" />
     <Content Include="HaLogo\HaLogo512.png" />
     <Content Include="HaLogo\HaLogo64.png" />
+    <Resource Include="Images\Quest\2022240_buff_icon.png" />
     <Content Include="Images\Quest\BtMarkNpc.png" />
     <Resource Include="Images\Quest\shop.meso.png" />
-    <Content Include="Images\Quest\summary_icon.basic.png" />
-    <Content Include="Images\Quest\summary_icon.prob.png" />
-    <Content Include="Images\Quest\summary_icon.reward.png" />
-    <Content Include="Images\Quest\summary_icon.select.png" />
-    <Content Include="Images\Quest\summary_icon.summary.png" />
+    <Resource Include="Images\Quest\QuestIcon.0.5.png" />
+    <Resource Include="Images\Quest\QuestIcon.1.0.png" />
+    <Resource Include="Images\Quest\QuestIcon.10.0.png" />
+    <Resource Include="Images\Quest\QuestIcon.11.0.png" />
+    <Resource Include="Images\Quest\QuestIcon.2.0.png" />
+    <Resource Include="Images\Quest\QuestIcon.3.0.png" />
+    <Resource Include="Images\Quest\QuestIcon.4.0.png" />
+    <Resource Include="Images\Quest\QuestIcon.5.0.png" />
+    <Resource Include="Images\Quest\QuestIcon.6.0.png" />
+    <Resource Include="Images\Quest\QuestIcon.7.0.png" />
+    <Resource Include="Images\Quest\QuestIcon.8.0.png" />
+    <Resource Include="Images\Quest\QuestIcon.9.0.png" />
+    <Resource Include="Images\Quest\summary_icon.basic.png" />
+    <Resource Include="Images\Quest\summary_icon.prob.png" />
+    <Resource Include="Images\Quest\summary_icon.select.png" />
+    <Resource Include="Images\Quest\summary_icon.summary.png" />
     <Resource Include="Images\Quest\questIcon_0.png" />
     <Resource Include="Images\box_edit-big.png" />
     <None Include="Resources\placeholder.bmp" />
