--- a/HaCreator/HaCreator.csproj
+++ b/HaCreator/HaCreator.csproj
@@ -241,6 +241,12 @@
     <Compile Include="GUI\Input\IntInputBox.Designer.cs">
       <DependentUpon>IntInputBox.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\InstanceEditor\LoadNpcSelector.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\InstanceEditor\LoadNpcSelector.Designer.cs">
+      <DependentUpon>LoadNpcSelector.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\InstanceEditor\LoadItemSelector.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -659,6 +665,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\InstanceEditor\BackgroundInstanceEditor.resx">
       <DependentUpon>BackgroundInstanceEditor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\InstanceEditor\LoadNpcSelector.resx">
+      <DependentUpon>LoadNpcSelector.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\InstanceEditor\LoadItemSelector.resx">
       <DependentUpon>LoadItemSelector.cs</DependentUpon>
