--- a/HaCreator/HaCreator.csproj
+++ b/HaCreator/HaCreator.csproj
@@ -162,7 +162,11 @@
     <Compile Include="Collections\MapleLinesEnumerator.cs" />
     <Compile Include="Collections\SerializableEnumerator.cs" />
     <Compile Include="Converter\EnumToVisibilityConverter.cs" />
+    <Compile Include="Converter\ItemIdToItemNameConverter.cs" />
+    <Compile Include="Converter\MapIdToMapNameConverter.cs" />
+    <Compile Include="Converter\NpcIdToNpcNameConverter.cs" />
     <Compile Include="Converter\PetSkillFlagConverter.cs" />
+    <Compile Include="Converter\QuestIdToQuestNameConverter.cs" />
     <Compile Include="CustomControls\CheckboxButton.cs" />
     <Compile Include="CustomControls\HaList.xaml.cs">
       <DependentUpon>HaList.xaml</DependentUpon>
