[HaCreator] Fix searchbox -- prior task is not cancelled as the user types a new character
-- performance is dramatically faster now~!

--- a/HaCreator/HaCreator.csproj
+++ b/HaCreator/HaCreator.csproj
@@ -255,6 +255,7 @@
     <Compile Include="GUI\InstanceEditor\LoadJobSelector.Designer.cs">
       <DependentUpon>LoadJobSelector.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\InstanceEditor\LoadSearchHelper.cs" />
     <Compile Include="GUI\InstanceEditor\LoadSkillSelector.cs">
       <SubType>Form</SubType>
     </Compile>
