--- a/HaCreator/HaCreator.csproj
+++ b/HaCreator/HaCreator.csproj
@@ -165,6 +165,7 @@
     <Compile Include="Converter\EnumToIntValueConverter.cs" />
     <Compile Include="Converter\EnumToVisibilityConverter.cs" />
     <Compile Include="Converter\ItemIdToItemNameConverter.cs" />
+    <Compile Include="Converter\JobClassBitfieldToClassNamesConverter.cs" />
     <Compile Include="Converter\JobIdToJobNameConverter.cs" />
     <Compile Include="Converter\MapIdToMapNameConverter.cs" />
     <Compile Include="Converter\NegativeOneToTrueConverter.cs" />
@@ -258,8 +259,8 @@
     <Compile Include="GUI\InstanceEditor\LoadJobSelector.Designer.cs">
       <DependentUpon>LoadJobSelector.cs</DependentUpon>
     </Compile>
-    <Compile Include="GUI\InstanceEditor\LoadJobsListSelector.xaml.cs">
-      <DependentUpon>LoadJobsListSelector.xaml</DependentUpon>
+    <Compile Include="GUI\InstanceEditor\LoadClassListSelector.xaml.cs">
+      <DependentUpon>LoadClassListSelector.xaml</DependentUpon>
     </Compile>
     <Compile Include="GUI\InstanceEditor\LoadSearchHelper.cs" />
     <Compile Include="GUI\InstanceEditor\LoadSkillSelector.cs">
@@ -915,7 +916,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="GUI\InstanceEditor\LoadJobsListSelector.xaml">
+    <Page Include="GUI\InstanceEditor\LoadClassListSelector.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
