--- a/RealESRGAN_AI_Upscale/RealESRGAN_AI_Upscale.csproj
+++ b/RealESRGAN_AI_Upscale/RealESRGAN_AI_Upscale.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>RealESRGAN_AI_Upscale</RootNamespace>
     <AssemblyName>RealESRGAN_AI_Upscale</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
