[HaRepacker] move wz key bruteforcing from MainForm to its own window
improve ux and code maintainability

--- a/HaRepacker/Harepacker-resurrected.csproj
+++ b/HaRepacker/Harepacker-resurrected.csproj
@@ -75,6 +75,9 @@
     <Compile Update="GUI\Input\IntegerInput.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Update="GUI\WzKeyBruteforceForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Update="TreeViewMS.cs">
       <SubType>Component</SubType>
     </Compile>
