--- a/HaCreator/HaCreator.csproj
+++ b/HaCreator/HaCreator.csproj
@@ -108,6 +108,9 @@
     <Compile Update="CustomControls\DirectXHolder.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Update="GUI\InstanceEditor\LoadMobSelector.cs">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\dockpanelsuite\WinFormsUI\WinFormsUI-Core.csproj" />
@@ -193,7 +196,7 @@
     </PackageReference>
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
     <PackageReference Include="System.Data.SQLite">
-      <Version>1.0.118</Version>
+      <Version>1.0.119</Version>
     </PackageReference>
     <PackageReference Include="System.Drawing.Common" Version="8.0.8" />
   </ItemGroup>
